--- a/project-03/Rangel_project_03.Rmd
+++ b/project-03/Rangel_project_03.Rmd
@@ -36,6 +36,45 @@ knitr::include_graphics("https://raw.githubusercontent.com/aalhamadani/dataviz_f
 
 Hint: the option `binwidth = 3` was used with the `geom_histogram()` function.
 
+**Replicated plot**
+
+```{r}
+library(lubridate)
+
+###############################################################
+# Data cleanup
+###############################################################
+# We create a day of year doy variable, combining the columns for year, month, and
+# day. The `lubridate` package is used for transforming a character vector to a date.
+tpa_clean <- weather_tpa %>%
+  unite("doy", year, month, day, sep = "-") %>%
+  mutate(
+    doy = ymd(doy),
+    max_temp = as.double(max_temp),
+    min_temp = as.double(min_temp),
+    precipitation = as.double(precipitation),
+    month_factor = factor(month(doy, label = TRUE, abbr = FALSE), levels = month.name) # Extract Month as a factor so we can use for facet
+  )
+
+###############################################################
+# Faceted Histogram Plot
+###############################################################
+ggplot(tpa_clean, aes(x = max_temp, fill = month_factor)) +
+  geom_histogram(binwidth = 3, boundary = 50, color = "white") +
+  facet_wrap(~ month_factor, ncol = 4) +
+  scale_fill_viridis_d(option = "viridis", begin = 0, end = 1) + # sets viridis color gradient
+  scale_y_continuous(limits = c(0, 20), expand = expansion(mult = c(0, 0.05))) +
+  scale_x_continuous(breaks = seq(60, 90, by = 10), limits = c(50, 100)) +
+  labs(
+    title = "Distribution of Daily Max Temperatures",
+    subtitle = "Tampa 2022, in Fahrenheit",
+    x = "Maximum Temperature",
+    y = "Number of Days"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "none")
+```
+
 (b) Create a plot like the one below:
 
 ```{r, echo = FALSE, out.width="80%", fig.align='center'}
@@ -44,6 +83,32 @@ knitr::include_graphics("https://raw.githubusercontent.com/aalhamadani/dataviz_f
 
 Hint: check the `kernel` parameter of the `geom_density()` function, and use `bw = 0.5`.
 
+**Replicated plot**
+
+```{r}
+###############################################################
+# Density Plot
+###############################################################
+ggplot(tpa_clean, aes(x = max_temp)) +
+  geom_density(
+    kernel = "gaussian",
+    bw = 0.5,
+    fill = "gray40",
+    color = "black",
+    linewidth = 1,
+    alpha = 0.8
+  ) +
+  scale_y_continuous(limits = c(0, 0.08)) +
+  scale_x_continuous(breaks = seq(60, 90, by = 10), limits = c(50, 100)) +
+  labs(
+    title = "Density of Max Temperatures",
+    subtitle = "Tampa 2022, in Fahrenheit",
+    x = "Maximum Temperature",
+    y = "Density"
+  ) +
+  theme_minimal()
+```
+
 (c) Create a plot like the one below:
 
 ```{r, echo = FALSE, out.width="80%", fig.align='center'}
@@ -51,6 +116,29 @@ knitr::include_graphics("https://raw.githubusercontent.com/aalhamadani/dataviz_f
 ```
 
 Hint: default options for `geom_density()` were used. 
+
+**Replicated plot**
+
+
+```{r}
+###############################################################
+# Faceted Density Plot
+###############################################################
+ggplot(tpa_clean, aes(x = max_temp, fill = month_factor)) +
+  geom_density() +
+  facet_wrap(~ month_factor, ncol = 4) +
+  scale_fill_viridis_d(option = "viridis", begin = 0, end = 1) +
+  scale_x_continuous(breaks = seq(60, 90, by = 10), limits = c(50, 100)) +
+  scale_y_continuous(limits = c(0, 0.25)) +
+  labs(
+    title = "Density plots for each month",
+    subtitle = "Tampa 2022, in Fahrenheit",
+    x = "Maximum Temperature",
+    y = "Density"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "none")
+```
 
 (d) Generate a plot like the chart below:
 
@@ -61,32 +149,37 @@ knitr::include_graphics("https://raw.githubusercontent.com/aalhamadani/dataviz_f
 
 Hint: use the`{ggridges}` package, and the `geom_density_ridges()` function paying close attention to the `quantile_lines` and `quantiles` parameters. The plot above uses the `plasma` option (color scale) for the _viridis_ palette.
 
+**Replicated Plot**
+```{r}
+library(ggridges)
+
+###############################################################
+# Ridges Plot
+###############################################################
+ggplot(tpa_clean, aes(x = max_temp, y = month_factor, fill = max_temp)) +
+  geom_density_ridges_gradient(scale = 3,
+                               aes(fill = after_stat(x)),
+                               quantile_lines = TRUE,
+                               quantiles = 2
+    ) +
+  scale_fill_viridis_c(option = "plasma",
+                       direction = 1,
+                       guide = guide_colorbar(title = NULL),
+                       breaks = seq(60, 100, by = 10)) + # Skips 50
+  scale_x_continuous(breaks = seq(50, 100, by = 10), limits = c(50, 100)) +
+  labs(title = "Monthly Maximum Temperatures",
+       subtitle = "Tampa 2022",
+       x = "Maximum Temperature (in Fahrenheit degrees)",
+       y = NULL) +
+  theme_ridges(grid = TRUE)
+
+```
 
 (e) Create a plot of your choice that uses the attribute for precipitation _(values of -99.9 for temperature or -99.99 for precipitation represent missing data)_.
 
 
 
 ## PART 2 
-
-> **You can choose to work on either Option (A) or Option (B)**. Remove from this template the option you decided not to work on. 
-
-
-### Option (A): Visualizing Text Data
-
-Review the set of slides (and additional resources linked in it) for visualizing text data: Week 6 PowerPoint slides of Visualizing Text Data. 
-
-Choose any dataset with text data, and create at least one visualization with it. For example, you can create a frequency count of most used bigrams, a sentiment analysis of the text data, a network visualization of terms commonly used together, and/or a visualization of a topic modeling approach to the problem of identifying words/documents associated to different topics in the text data you decide to use. 
-
-Make sure to include a copy of the dataset in the `data/` folder, and reference your sources if different from the ones listed below:
-
-- [Billboard Top 100 Lyrics](https://raw.githubusercontent.com/aalhamadani/dataviz_final_project/main/data/BB_top100_2015.csv)
-
-- [RateMyProfessors comments](https://raw.githubusercontent.com/aalhamadani/dataviz_final_project/main/data/rmp_wit_comments.csv)
-
-- [FL Poly News Articles](https://raw.githubusercontent.com/aalhamadani/dataviz_final_project/main/data/flpoly_news_SP23.csv)
-
-
-(to get the "raw" data from any of the links listed above, simply click on the `raw` button of the GitHub page and copy the URL to be able to read it in your computer using the `read_csv()` function)
 
 
 ### Option (B): Data on Concrete Strength 
@@ -127,19 +220,128 @@ new_concrete <- concrete %>%
 
 1. Explore the distribution of 2 of the continuous variables available in the dataset. Do ranges make sense? Comment on your findings.
 
+
+
+```{r}
+
+###############################################################
+# Histogram for Water
+###############################################################
+ggplot(concrete, aes(x = Water)) +
+  geom_histogram(binwidth = 10, fill = "skyblue", color = "black") +
+  labs(title = "Distribution of Water Content",
+       x = "Water (kg/m³)",
+       y = "Count") +
+  theme_minimal()
+
+###############################################################
+# Boxplot for Water
+###############################################################
+ggplot(new_concrete, aes(x = strength_range, y = Water, fill = strength_range)) +
+  geom_boxplot(alpha = 0.7) +
+  labs(title = "Water Content Across Concrete Strength Ranges",
+       x = "Concrete Strength Range (MPa)",
+       y = "Water Content (kg/m³)") +
+  theme_minimal() +
+  theme(legend.position = "none")
+
+```
+The water content seems to be inversely proportional to strength.
+
+
+
+```{r}
+###############################################################
+# Histogram for Superplasticizer
+###############################################################
+ggplot(concrete, aes(x = Superplasticizer)) +
+  geom_histogram(binwidth = 0.5, fill = "coral", color = "black") +
+  labs(title = "Distribution of Superplasticizer",
+       x = "Superplasticizer (kg/m³)",
+       y = "Count") +
+    theme_minimal()
+
+###############################################################
+# Histogram for Superplasticizer
+###############################################################
+ggplot(new_concrete, aes(x = strength_range, y = Superplasticizer, fill = strength_range)) +
+  geom_boxplot(alpha = 0.7) +
+  labs(title = "Superplasticizer Content Across Concrete Strength Ranges",
+       x = "Concrete Strength Range (MPa)",
+       y = "Superplasticizer Content (kg/m³)") +
+  theme_minimal() +
+  theme(legend.position = "none")
+
+# Gather the two variables into long format for easy faceting
+df_long <- concrete %>%
+  select(Water, Superplasticizer) %>%
+  pivot_longer(cols = everything(), names_to = "variable", values_to = "value")
+```
+
+Many entries have no superplasticizer content.
+
+Superplasticizer is a chemical additive to increase flowability without the need for excess water, know as a high-range water reducer.
+
+Higher levels are associated with higher strength ranges, also correlating with the lower water amount in stronger concrete.
+
 2. Use a _temporal_ indicator such as the one available in the variable `Age` (measured in days). Generate a plot similar to the one shown below. Comment on your results.
 
 ```{r, echo = FALSE, out.width="80%", fig.align='center'}
 knitr::include_graphics("https://raw.githubusercontent.com/aalhamadani/dataviz_final_project/main/figures/concrete_strength.png")
 ```
 
+**Replicated Plot**
+```{r}
+###############################################################
+# Concrete Boxplot
+###############################################################
+ggplot(new_concrete, aes(x = factor(Age), y = Concrete_compressive_strength, fill = strength_range)) +
+  geom_boxplot() +
+  labs(x = "Age (days)", y = "Compressive Strength (MPa)", 
+       title = "Concrete Compressive Strength by Age and Strength Range") +
+  theme_minimal()
+```
+
+- Compressive strength tends to increase with age, as the curing and hardening process happens.
+
 
 3. Create a scatterplot similar to the one shown below. Pay special attention to which variables are being mapped to specific aesthetics of the plot. Comment on your results. 
+
 
 ```{r, echo = FALSE, out.width="80%", fig.align='center'}
 knitr::include_graphics("https://raw.githubusercontent.com/aalhamadani/dataviz_final_project/main/figures/cement_plot.png")
 ```
 
+**Replicated Plot**
 
+```{r}
+###############################################################
+# Concrete Scatterplot
+###############################################################
+ggplot(concrete, aes(x = Cement, y = Concrete_compressive_strength,
+                     color = Water, size = Age)) +
+  geom_point(alpha = 0.5) +
+  scale_color_viridis_c(option = "viridis",
+                        limits = c(125, 250),
+                        breaks = c(125, 150, 175, 200, 225),  # omit 250 from breaks
+                        labels = c("125", "150", "175", "200", "225")) +
+
+  labs(title = "Exploring Strength versus (Cement, Age, and Water)",
+       x = "Cement",
+       y = "Strength",
+       color = "Water",
+       size = "Age",
+       caption = "Age is measured in days") +
+  theme_minimal() +
+    guides(
+    size = guide_legend(order = 1),  # size legend first (on top)
+    color = guide_colorbar(order = 2)  # color legend second (below)
+  )
+```
+
+- Higher strength concrete tends to have less water content.
+- Higher cement content does not have a perfectly linear relationship with strength (diminishing returns).
+- Older concrete tends to cluster higher on the plot, though high age with high water still shows lower strength.
+- Thus, the highest strength is obtained with higher cement content, lower water content, and older age.
 
 
